Parallelize preprocessing, combine validate+split, add genmcf profiling
Reduce pipeline wall time by overlapping Step 0 and Step 1 and
eliminating the second full CSV read during validate → split.

Main changes:

* Launch Step 1 (schema/LLM review) in the background during Step 0
* Add validate_and_split.py for single-pass CSV validation + splitting
* Preserve existing multi-CSV and fallback split behavior
* Add JFR + GC profiling support via GENMCF_PROFILE=true
* Improve startup/status messaging and SPOT failure handling UX
* Add cleanup trap for background Step 1 process lifecycle safety